syntax = "proto3";

option java_outer_classname = "TicketTracker";
option java_package = "com.jooms.tickettracker";

import "record_metadata_options.proto";

message Ticket {
    int32 id = 1;
    string key = 2; // Unique but recognizable key
    string title = 3;
    string description = 4;
    TicketType type = 5;
}

enum TicketType {
    Work = 0;
    NewFunctionality = 1;
    BrokenFunctionality = 2;
}

message UnionDescriptor {
    option (com.apple.foundationdb.record.record).usage = UNION;
    Ticket _Ticket = 1;
}
